Fix layout bug in character picker

--- a/common/charsel.css
+++ b/common/charsel.css
@@ -5,6 +5,7 @@ body {
 
 #picker {
     display: flex;
+    align-items: self-start;
 }
 
 .girls, .description {
